refactor: simplify/consolidate (#27)
* feature: added isSolved check in HSD search.

* refactor: changed drawDeck to return a candidate

* refactor: changed drawDeck to return a candidate for Klondike

* refactor: changed drawDeck to return a candidate for Pyramid

* refactor: changed drawDeck to return a candidate for TriPeaks

* refactor: consolidate the execution